force-app/main/default/objects/ScheduledCourse__c/ScheduledCourse__c.object-meta.xml
<CustomObject>
    <label>Scheduled Course</label>
    <nameField>
        <label>Scheduled Course ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scheduled Courses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>