force-app/main/default/objects/ScheduledCourse__c/fields/BookingUrl__c.field-meta.xml
<CustomField>
    <fullName>BookingUrl__c</fullName>
    <label>Booking Url</label>
    <type>Url</type>
</CustomField>