force-app/main/default/objects/ScheduledCourse__c/fields/DiscordUrl__c.field-meta.xml
<CustomField>
    <fullName>DiscordUrl__c</fullName>
    <label>Discord Url</label>
    <type>Url</type>
</CustomField>