force-app/main/default/objects/ScheduledCourse__c/fields/EnableRSVP__c.field-meta.xml
<CustomField>
    <fullName>EnableRSVP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable RSVP?</label>
    <type>Checkbox</type>
</CustomField>