force-app/main/default/objects/ScheduledCourse__c/fields/Max_Seat__c.field-meta.xml
<CustomField>
    <fullName>Max_Seat__c</fullName>
    <label>Max Seat</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>