force-app/main/default/objects/ScheduledCourse__c/fields/TotalBooking__c.field-meta.xml
<CustomField>
    <fullName>TotalBooking__c</fullName>
    <label>Total Booking</label>
    <summaryFilterItems>
        <field>CourseBooking__c.Status__c</field>
        <operation>equals</operation>
        <value>Deposit Paid, Invoiced, Fully Paid</value>
    </summaryFilterItems>
    <summaryForeignKey>CourseBooking__c.Scheduled_Course__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>