force-app/main/default/objects/ScheduledCourse__c/fields/Trainer__c.field-meta.xml
<CustomField>
    <fullName>Trainer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trainer</label>
    <referenceTo>Trainer__c</referenceTo>
    <relationshipLabel>Scheduled Courses</relationshipLabel>
    <relationshipName>Scheduled_Courses</relationshipName>
    <type>Lookup</type>
</CustomField>