force-app/main/default/objects/ScheduledCourse__c/fields/Training_Center__c.field-meta.xml
<CustomField>
    <fullName>Training_Center__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Training Center</label>
    <referenceTo>TrainingCenter__c</referenceTo>
    <relationshipLabel>Scheduled Courses</relationshipLabel>
    <relationshipName>Scheduled_Courses</relationshipName>
    <type>Lookup</type>
</CustomField>