force-app/main/default/objects/ScheduledCourse__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Course__c</columns>
    <columns>Max_Seat__c</columns>
    <columns>Mode__c</columns>
    <columns>Start_Date_Time__c</columns>
    <columns>End_Date_Time__c</columns>
    <columns>Trainer__c</columns>
    <columns>TotalBooking__c</columns>
    <columns>Status__c</columns>
    <columns>Training_Center__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>